--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,6 +14,7 @@
     <div class="wrapper">
         <div class="header">
             <div class="header__title">Button</div>
+            <button class="header__reset" id="reset-button">Reset</button>
         </div>
 
         <div class="body">
@@ -35,7 +36,7 @@
                 </div>
             </div>
             
-            <div class="main-screen">
+            <div class="main-screen" id="main-screen">
                 <div class="main-screen__body">
                     <div class="main-screen__body-players" id="players-list">
                         
